--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,18 +1,18 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-dotenv==1.0.0
-requests==2.31.0
-beautifulsoup4==4.12.2
-lxml==4.9.3
-pandas==2.1.4
-numpy==1.26.2
-scikit-learn==1.3.2
-openai==1.3.5
-pydantic==2.4.2
-pydantic-settings==2.0.3
-python-multipart==0.0.6
-langchain==0.1.0
-langchain-community==0.0.30
-langchain-openai==0.1.13
-pinecone==4.0.0
-pypdf==3.15.0
+fastapi
+uvicorn[standard]
+python-dotenv
+requests
+beautifulsoup4
+lxml
+pandas
+numpy
+scikit-learn
+openai
+pydantic
+pydantic-settings
+python-multipart
+langchain
+langchain-community
+langchain-openai
+pinecone
+pypdf
